test/error/syn/functionParameterExp.tig
let
    var n := 0
    var f := 1
    function fun(z, a*b, c+d , e, f) := 
    (
	    a:=b*c
    )
in  
    fun(n,f);
end
